--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Host=localhost;Port=5432;Database=StockAppDb;Username=postgres;Password=master"
+    "Connection": "Host=localhost;Port=5432;Database=StockDb;Username=postgres;Password=master"
   }
 }
