--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Connection": "Host=localhost;Port=5432;Database=StockDb;Username=postgres;Password=master",
-    "Docker": "Host=db;Port=5432;Database=postgres;Username=postgres;Password=postgres"
+    "Connection": "Host=postgres;Database=StockDb;Username=postgres;Password=postgres"
   }
 }
