--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,22 +1,18 @@
 version: '3.4'
 
 services:
-  db:
+  postgres:
     image: postgres
-    volumes:
-      - ./data/db:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB=postgres
       - POSTGRES_USER=postgres
       - POSTGRES_PASSWORD=postgres
   webapi:
-    image: ${DOCKER_REGISTRY-}webapi
+    image: webapi
     build:
       context: .
       dockerfile: WebApi/Dockerfile
     ports:
-      - 5000:80
-      - 5001:433
+      - 80:80
+      - 433:433
     depends_on:
-      - db
-        
+      - postgres
