Fix docker deployment

--- a/WebApi/appsettings.Development.json
+++ b/WebApi/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "Docker": "Server=localhost;Database=StockDb;Username=postgres;Password=master"
   }
 }
