--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://stockappazure.b2clogin.com",
+    "ClientId": "678424a7-11d7-4f76-9319-d62c26123df0",
+    "CallbackPath": "/signin-oidc",
+    "Domain": "stockappazure.onmicrosoft.com",
+    "SignedOutCallbackPath": "/signout",
+    "SignUpSignInPolicyId": "B2C_1_signin",
+    "ResetPasswordPolicyId": "",
+    "EditProfilePolicyId": "",
+    "ClientSecret": "eqn7Q~26euYKYpeTpVxY2N430xJWTgAWyxOEo"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
