Add Azure AD B2C

--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -1,4 +1,15 @@
 {
+  "AzureAdB2C": {
+    "Instance": "https://***REMOVED***",
+    "ClientId": "***REMOVED***",
+    "CallbackPath": "/signin-oidc",
+    "Domain": "***REMOVED***",
+    "SignedOutCallbackPath": "/signout",
+    "SignUpSignInPolicyId": "B2C_1_signin",
+    "ResetPasswordPolicyId": "",
+    "EditProfilePolicyId": "",
+    "ClientSecret": "***REMOVED***"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
