--- a/ExcelToServer/ExcelToServer.csproj
+++ b/ExcelToServer/ExcelToServer.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="ExcelDataReader" Version="3.6.0" />
+    <PackageReference Include="ExcelDataReader" Version="3.7.0-develop00310" />
   </ItemGroup>
 
   <ItemGroup>
