--- a/StockApp/StockApp.csproj
+++ b/StockApp/StockApp.csproj
@@ -8,8 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0-rc.2.21480.10" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0-rc.2.21480.10" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.OpenIdConnect" Version="6.0.0" />
     <PackageReference Include="Microsoft.Identity.Web" Version="1.20.0" />
     <PackageReference Include="Microsoft.Identity.Web.UI" Version="1.20.0" />
     <PackageReference Include="Radzen.Blazor" Version="3.11.12" />
