Update to new version .NET 6 release

--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -10,6 +10,12 @@
     "EditProfilePolicyId": "",
     "ClientSecret": "eqn7Q~26euYKYpeTpVxY2N430xJWTgAWyxOEo"
   },
+  "WebApi": {
+    "Domain": "docker.farhad.su",
+    "Path": "/api/Products",
+    "Port": 49158,
+    "SecurePort": 5005
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
