--- a/StockApp/Properties/launchSettings.json
+++ b/StockApp/Properties/launchSettings.json
@@ -3,19 +3,19 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:27084",
-      "sslPort": 44339
+      "applicationUrl": "http://localhost:59172/",
+      "sslPort": 44380
     }
   },
   "profiles": {
     "StockApp": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7121;http://localhost:5121",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "applicationUrl": "https://localhost:7121;http://localhost:5121",
+      "dotnetRunMessages": true
     },
     "IIS Express": {
       "commandName": "IISExpress",
