Remove All Secret keys!

--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -1,17 +1,17 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://***REMOVED***",
-    "ClientId": "***REMOVED***",
+    "Instance": null,
+    "ClientId": null,
     "CallbackPath": "/signin-oidc",
-    "Domain": "***REMOVED***",
+    "Domain": null,
     "SignedOutCallbackPath": "/signout",
     "SignUpSignInPolicyId": "B2C_1_signin",
     "ResetPasswordPolicyId": "",
     "EditProfilePolicyId": "",
-    "ClientSecret": "***REMOVED***"
+    "ClientSecret": null
   },
   "WebApi": {
-    "Domain": "***REMOVED***",
+    "Domain": null,
     "Path": "/api/Products",
     "Port": 49158,
     "SecurePort": 5005
