--- a/WebApi/appsettings.json
+++ b/WebApi/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Docker": "Server=db;Database=StockDb;Username=postgres;Password=postgres"
+    "Docker": null
   }
 }
