Remove All Secret keys!

--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -1,17 +1,17 @@
 {
   "AzureAdB2C": {
-    "Instance": "https://stockappazure.b2clogin.com",
-    "ClientId": "678424a7-11d7-4f76-9319-d62c26123df0",
+    "Instance": null,
+    "ClientId": null,
     "CallbackPath": "/signin-oidc",
-    "Domain": "stockappazure.onmicrosoft.com",
+    "Domain": null,
     "SignedOutCallbackPath": "/signout",
     "SignUpSignInPolicyId": "B2C_1_signin",
     "ResetPasswordPolicyId": "",
     "EditProfilePolicyId": "",
-    "ClientSecret": "eqn7Q~26euYKYpeTpVxY2N430xJWTgAWyxOEo"
+    "ClientSecret": null
   },
   "WebApi": {
-    "Domain": "docker.farhad.su",
+    "Domain": null,
     "Path": "/api/Products",
     "Port": 49158,
     "SecurePort": 5005
