Remove secrets from config

--- a/ExcelToServer/App.config
+++ b/ExcelToServer/App.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="azure" value="" />
+    <add key="azure" value="http://docker.farhad.su:49158/api/Products" />
   </appSettings>
 </configuration>
