--- a/StockApp/appsettings.json
+++ b/StockApp/appsettings.json
@@ -1,11 +1,11 @@
 {
   "AzureAdB2C": {
-    "Instance": null,
+    "Instance": "https://stockappazure.b2clogin.com",
     "ClientId": null,
     "CallbackPath": "/signin-oidc",
     "Domain": null,
     "SignedOutCallbackPath": "/signout",
-    "SignUpSignInPolicyId": "B2C_1_signin",
+    "SignUpSignInPolicyId": "B2C_1_login",
     "ResetPasswordPolicyId": "",
     "EditProfilePolicyId": "",
     "ClientSecret": null
