--- a/.gitignore
+++ b/.gitignore
@@ -9,7 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
-App.config
+*/[Aa]pp.config
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
